Common/SSCE/sdk/delphi/ssce.pas


	procedure SSCE_GetStringTableName(tableName: PChar;
	  tableNameSz: SSCE_S16); {$IFDEF WIN32} stdcall; {$ENDIF}

	procedure SSCE_GetUserLexFiles(fileList: PChar; fileListSz: SSCE_U16);
      {$IFDEF WIN32} stdcall; {$ENDIF}

	procedure SSCE_GetUserLexPath(path: PChar; pathSz: SSCE_U16);
      {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_OptionsDlg(parent: HWnd): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_OptionsDlgTmplt(parent: HWnd; clientInst: THandle;
	  optDlgTmpltName: PChar): SSCE_S16; {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_ResetLex: SSCE_S16; {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_SetAutoCorrect(autoCorrect: SSCE_S16): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

	procedure SSCE_SetDialogOrigin(x, y: SSCE_S16); {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_SetHelpFile(fileName: PChar): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_SetIniFile(iniFile: PChar): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

    function SSCE_SetKey(key: SSCE_U32): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_SetMainLexPath(path: PChar): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_SetMainLexFiles(fileList: PChar): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_SetMinSuggestDepth(depth: SSCE_S16): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

    function SSCE_SetRegTreeName(treeName: PChar): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

    function SSCE_SetSelUserLexFile(fileName: PChar): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_SetStringTableName(tableName: PChar): SSCE_S16;
	  {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_SetUserLexFiles(fileList: PChar): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

	function SSCE_SetUserLexPath(path: PChar): SSCE_S16;
      {$IFDEF WIN32} stdcall; {$ENDIF}

implementation

	function SSCE_AddToLex; external SSCE_DLL;

	function SSCE_CheckBlock; external SSCE_DLL;

    function SSCE_CheckString; external SSCE_DLL;

	function SSCE_CheckWord; external SSCE_DLL;

	function SSCE_ClearLex; external SSCE_DLL;

	function SSCE_CloseBlock; external SSCE_DLL;

	function SSCE_CloseLex; external SSCE_DLL;

	function SSCE_CloseSession; external SSCE_DLL;

	procedure SSCE_CompressLexAbort; external SSCE_DLL;

	function SSCE_CompressLexEnd; external SSCE_DLL;

	function SSCE_CompressLexFile; external SSCE_DLL;

	function SSCE_CompressLexInit; external SSCE_DLL;

	function SSCE_CreateLex; external SSCE_DLL;

	function SSCE_DelBlockText; external SSCE_DLL;

	function SSCE_DelBlockWord; external SSCE_DLL;

	function SSCE_DelFromLex; external SSCE_DLL;

	function SSCE_DelStringText; external SSCE_DLL;

	function SSCE_DelStringWord; external SSCE_DLL;

	function SSCE_FindLexWord; external SSCE_DLL;

	function SSCE_GetBlock; external SSCE_DLL;

	function SSCE_GetBlockInfo; external SSCE_DLL;

	function SSCE_GetBlockWord; external SSCE_DLL;

	function SSCE_GetLex; external SSCE_DLL;

	function SSCE_GetLexInfo; external SSCE_DLL;

	function SSCE_GetOption; external SSCE_DLL;

	function SSCE_GetStringWord; external SSCE_DLL;

	function SSCE_InsertBlockText; external SSCE_DLL;

	function SSCE_InsertStringText; external SSCE_DLL;

	function SSCE_NextBlockWord; external SSCE_DLL;

	function SSCE_OpenBlock; external SSCE_DLL;

	function SSCE_OpenLex; external SSCE_DLL;

	function SSCE_OpenSession; external SSCE_DLL;

	function SSCE_ReplaceBlockWord; external SSCE_DLL;

	function SSCE_ReplaceStringWord; external SSCE_DLL;

    function SSCE_SetBlockCursor; external SSCE_DLL;

	procedure SSCE_SetDebugFile; external SSCE_DLL;

	function SSCE_SetOption; external SSCE_DLL;

	function SSCE_Suggest; external SSCE_DLL;

	procedure SSCE_Version; external SSCE_DLL;

	function SSCE_CheckBlockDlg; external SSCE_DLL;

	function SSCE_CheckBlockDlgTmplt; external SSCE_DLL;

    function SSCE_CheckCtrlBackground; external SSCE_DLL;

	function SSCE_CheckCtrlDlg; external SSCE_DLL;

	function SSCE_CheckCtrlDlgTmplt; external SSCE_DLL;

	function SSCE_EditLexDlg; external SSCE_DLL;

	function SSCE_EditLexDlgTmplt; external SSCE_DLL;

	function SSCE_GetAutoCorrect; external SSCE_DLL;

    procedure SSCE_GetHelpFile; external SSCE_DLL;

	function SSCE_GetLexId; external SSCE_DLL;

	procedure SSCE_GetMainLexFiles; external SSCE_DLL;

	procedure SSCE_GetMainLexPath; external SSCE_DLL;

	function SSCE_GetMinSuggestDepth; external SSCE_DLL;

    procedure SSCE_GetRegTreeName; external SSCE_DLL;

    procedure SSCE_GetSelUserLexFile; external SSCE_DLL;

	function SSCE_GetSid; external SSCE_DLL;

	procedure SSCE_GetStatistics; external SSCE_DLL;

	procedure SSCE_GetStringTableName; external SSCE_DLL;

	procedure SSCE_GetUserLexFiles; external SSCE_DLL;

	procedure SSCE_GetUserLexPath; external SSCE_DLL;

	function SSCE_OptionsDlg; external SSCE_DLL;

	function SSCE_OptionsDlgTmplt; external SSCE_DLL;

	function SSCE_ResetLex; external SSCE_DLL;

	function SSCE_SetAutoCorrect; external SSCE_DLL;

	procedure SSCE_SetDialogOrigin; external SSCE_DLL;

    function SSCE_SetHelpFile; external SSCE_DLL;

	function SSCE_SetIniFile; external SSCE_DLL;

    function SSCE_SetKey; external SSCE_DLL;

	function SSCE_SetMainLexFiles; external SSCE_DLL;

	function SSCE_SetMainLexPath; external SSCE_DLL;

	function SSCE_SetMinSuggestDepth; external SSCE_DLL;

    function SSCE_SetRegTreeName; external SSCE_DLL;

    function SSCE_SetSelUserLexFile; external SSCE_DLL;

	function SSCE_SetStringTableName; external SSCE_DLL;

	function SSCE_SetUserLexFiles; external SSCE_DLL;

	function SSCE_SetUserLexPath; external SSCE_DLL;

end.
